fixing alignment issue
Fixing some of the UI alignment issue causing elements to lean towards left.

--- a/src/frontend/react-records/src/App.css
+++ b/src/frontend/react-records/src/App.css
@@ -54,7 +54,7 @@ h1,h3{
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 #main nav ul {
@@ -68,12 +68,17 @@ h1,h3{
   }
 
 
-form,
-form button {
-  display: inline-block; /* Make each element a block-level element */
-  width: 100%; /* Optional: Make them take up the full width of their container */
-  margin:0 auto; /* Optional: Add some space between elements */
-  color:rgb(118,118,118);
-  
-}
+  #input-field {
+    display: inline-block; /* Make each element a block-level element */
+    width: 100%; /* Optional: Make them take up the full width of their container */
+    margin:0 auto; /* Optional: Add some space between elements */
+    color:rgb(118,118,118);
+    text-align: center;
+  }
 
+
+li{
+  color: black;
+  list-style: none;
+  text-align: center;
+}
